--- a/pom.xml
+++ b/pom.xml
@@ -1,35 +1,20 @@
 <project>
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>@groupId@</groupId>
-  <artifactId>@artifactId@</artifactId>
-  <version>@version@</version>
-  <packaging>jar</packaging>
-
-  <name>harikrishna</name>
-  <description>@description@</description>
-  <url>https://github.com/harikrishna34/new_proj1/new/master</url>
-
-  <licenses>
-    <license>
-      <name>The Unlicense</name>
-      <url>http://unlicense.org/UNLICENSE</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-
-  <scm>
-    <connection>
-      scm:https://github.com/harikrishna34/new_proj1/new/master
-    </connection>
-    <url>https://github.com/harikrishna34/new_proj1.git/url>
-  </scm>
-
-  <developers>
-    <developer>
-      <name>harikrishna</name>
-      <email>harilakki34@gmail.com@gmail.com</email>
-      <url>http://nullprogram.com</url>
-      <timezone>-5</timezone>
-    </developer>
-  </developers>
+  ...
+  <properties>
+    <mavenVersion>3.0</mavenVersion>
+  </properties>
+ 
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-artifact</artifactId>
+      <version>${mavenVersion}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-core</artifactId>
+      <version>${mavenVersion}</version>
+    </dependency>
+  </dependencies>
+  ...
 </project>
